--- a/Win10tweaker.css
+++ b/Win10tweaker.css
@@ -4,16 +4,6 @@
   --mainTextColor: rgb(224 224 224);
   --borderColor rgb(47 47 66);
 }
-@keyframes AnimationFromLeftToRight{
-  from{
-    transform: translateX(-171px);
-    opacity: 0;
-  }
-  to{
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
 @keyframes AnimationFromUpToDown{
   from{
     transform: translateY(-120px);
@@ -96,14 +86,6 @@ footer.fusion-footer-widget-area.fusion-widget-area{
 .wp-night-mode-on #af-wrapper #forum-search{
   background-color: #3637464f;
 }
-
-.title-element,.content-container{
-  animation: 0.8s AnimationFromLeftToRight;
-}
-#forum-header,.fusion-text{
-  animation: 0.8s AnimationFromUpToDown;
-}
-
 .tooltips span {
   color: #70abe6 !important;
 } 
@@ -139,4 +121,31 @@ footer.fusion-footer-widget-area.fusion-widget-area{
 
 .wp-night-mode-on #af-wrapper .pages strong:hover, .wp-night-mode-on #af-wrapper .pages a:hover{
   background-color: #4f4f6e;
+}
+/*АНИМАЦИИ*/
+@keyframes AnimationFromLeftToRight{
+  from{
+    transform: translateX(-171px);
+    opacity: 0;
+  }
+  to{
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes AnimationFromUpToDown{
+  from{
+    transform: translateY(-120px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.title-element,.content-container{
+  animation: 0.8s AnimationFromLeftToRight;
+}
+#forum-header,.fusion-text{
+  animation: 0.8s AnimationFromUpToDown;
 }
