--- a/Win10tweaker.css
+++ b/Win10tweaker.css
@@ -141,3 +141,7 @@ footer.fusion-footer-widget-area.fusion-widget-area{
 #forum-header,.fusion-text{
   animation: 0.8s AnimationFromUpToDown;
 }
+
+.wp-night-mode-on #af-wrapper .forum-poster-summary > a{
+  color: #949f1d !important;
+}
