--- a/Win10tweakerDeleteEl.css
+++ b/Win10tweakerDeleteEl.css
@@ -1,1 +1,16 @@
+.fusion-text.fusion-text-1 {
+    display: none;
+}
 
+footer.fusion-footer-widget-area.fusion-widget-area {
+    background: #302f3f;
+    display: none;
+}
+
+.wp-night-mode-on #af-wrapper #statistics {
+    display: none;
+}
+
+#af-wrapper #read-unread {
+    display: none;
+}
