--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -742,7 +742,8 @@ button[class*="lookFilled__950dd"]:hover {
     backdrop-filter: blur(25px);
 }
 
-.wrapper_a6f950:hover .childWrapper__760c6, .wrapper_a6f950.selected_b420e6 .childWrapper__760c6 {
+.wrapper_a6f950:hover .childWrapper__760c6,
+.wrapper_a6f950.selected_b420e6 .childWrapper__760c6 {
     background: rgba(255, 255, 255, 0.1) !important;
     box-shadow: inset 0 0 15px rgba(255, 255, 255, 0.2) !important;
 }
@@ -849,4 +850,9 @@ button[class*="lookFilled__950dd"]:hover {
 
 .vc-notification {
     backdrop-filter: blur(15px);
+}
+
+/* фон сообщений при наведении */
+.theme-dark.mouse-mode.full-motion .message_ccca67:hover {
+    background: rgba(190, 190, 190, 0.1);
 }
