--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -281,15 +281,6 @@ body {
     width: 94% !important;
 }
 
-/* Стеклеянные окна */
-.searchBarComponent_f0963d, /* Строка поиска слева сверху */
-.menu_d90b3d:not(.menu_ad5fac) /* Контекстное меню */ {
-    background: rgba(255, 255, 255, 0.03) !important;
-    /* box-shadow: inset 0 0 10px rgba(100, 100, 100, 0.25) !important; */
-    border-radius: 10px !important;
-    border: 1px solid rgba(255, 255, 255, 0.07);
-}
-
 /* Контекстное меню Blur */
 .menu_d90b3d:not(.menu_ad5fac, [id="account"], [id="status"]):before {
     position: absolute;
@@ -1023,6 +1014,14 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
 .root_cbf230.elevationHigh_ff8688 {
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.1) !important;
+    border-radius: 10px;
+}
+
+/* Стеклеянные окна */
+.searchBarComponent_f0963d, /* Строка поиска слева сверху */
+.menu_d90b3d:not(.menu_ad5fac), /* Контекстное меню */ 
+.searchBar_e7c031   /* поиск в настройках */ {
+    background: rgba(190, 190, 190, 0.05) !important;
     border-radius: 10px;
 }
 
