--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -1061,8 +1061,7 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     border-radius: 10px;
 }
 .body_adbea6,
-.bar_eba0ba,
-.thin_c49869 {
+.bar_eba0ba {
     backdrop-filter: blur(10px);
 }
 
