--- a/Discord Theme/jAba.css
+++ b/Discord Theme/jAba.css
@@ -1069,6 +1069,10 @@ article.embedWrapper_b558d0.embedFlexGrow_b558d0.embedFull_b0068a.embed_b0068a.m
     border-radius: 10px;
 }
 
+.statusBubbleSingleLineWithTextShape_d0a252 {
+    background-color: rgba(255, 255, 255, 0.05) !important;
+}
+
 @keyframes ani-rotate {
     0% {
         transform: rotate(0);
